--- a/app/views/notes/index.html.haml
+++ b/app/views/notes/index.html.haml
@@ -1,6 +1,8 @@
+= render "/sidebars/notes/default"
+
 %article
   - if current_auth
-    %h1.float_left= t("notes.list title")
+    %h1.float_left= "#{@reference_title} #{t('notes.list title')}"
     %dl.combo_button.float_right
       %dt
       %dd.highlighted
@@ -8,7 +10,7 @@
       %dd
         = link_to t("notes.my notes"), user_notes_path(current_user)
   - else
-    %h1= t("notes.list title")
+    %h1= "#{@reference_title} #{t('notes.list title')}"
   - unless @notes.empty?
     %ul.big_list
       = render partial: "list_item", collection: @notes, locals: {display: :avatar}
