--- a/app/views/references/notes.html.haml
+++ b/app/views/references/notes.html.haml
@@ -1,2 +1,1 @@
-= render_cell(:notes_list_widget, :display, {notes: @notes, title: t("notes.community notes")})
-
+= render_cell(:notes_list_widget, :display, {notes: @notes, link: related_notes_url(reference: @ref.to_usfm.downcase), title: t("notes.community notes")})
