Lots of Profile work.

--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -191,6 +191,20 @@ a.cta span
   margin: 3px 0 0 0
 
 
+/* Profile page */
+
+#main article.profile
+  .big_list
+    li
+      overflow: hidden
+
+#main article.profile .big_list li form button,
+#main .profile_header form button
+  border-radius: 4px
+  padding: 4px 20px !important
+  font-size: 15px
+  text-shadow: none
+
 /* 404 page */
 
 #main article.error
