--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -156,7 +156,7 @@
   border: 1px solid #cbc9cf
     bottom: 0
   font-size: 12px
-  padding: 30px 30px 0 195px
+  padding: 0px
   position: relative
   min-height: 170px
 
@@ -188,6 +188,21 @@
   position: absolute
   top: 30px
   left: 30px
+
+.profile_header
+  padding: 30px 30px 10px 160px
+  overflow: hidden
+  height: 100px
+
+  button
+    float: left
+    border-radius: 4px
+    padding: 4px 20px !important
+
+.profile_info
+  padding: 20px 30px
+  overflow: hidden
+
 
 .top_section li
   background:
