--- a/app/assets/stylesheets/mobile/_header.sass
+++ b/app/assets/stylesheets/mobile/_header.sass
@@ -83,7 +83,7 @@
 
 #header .save_btn,
 #header .submit_btn
-  background: image-url("mobile/save_btn.jpg") repeat-x
+  background: #81a950
   display: block
   padding: 0px 10px
   float: right
@@ -96,7 +96,7 @@
   line-height: 26px
   border: 0px
   box-shadow: none
-  text-shadow: none
+  text-shadow: rgba(0,0,0,0.3) 0 -1px 0
   font-weight: normal
 
 #header .cancel_btn
