All days of public/sample reading plans are now accessible.

--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -65,6 +65,12 @@
 .widget header
   padding: 5px 15px 5px 20px
 
+  a, a:link
+    color: #444
+
+  a:hover
+    color: #666
+
 #main header,
 .header_tabs
   +round_top
