--- a/app/views/plans/sample.html.haml
+++ b/app/views/plans/sample.html.haml
@@ -1,3 +1,3 @@
-- plan = @presenter.plan
-- @title = plan.title.dup
+- @title = @plan.title.dup
+
 = render partial: "/references/reader", locals: {presenter: @presenter}
