--- a/app/views/references/_js.html.haml
+++ b/app/views/references/_js.html.haml
@@ -55,7 +55,7 @@
   - version_json[:books] = {}
   - version.books.each do |book_usfm, book_info|
     - chapters = version.books[book_usfm].chapters.map {|c| {human: c.human, usfm: c.usfm.downcase, canon: c.canonical }}
-    - version_json[:books][book_usfm.downcase] = {human: book_info.human, chapters: chapters }
+    - version_json[:books][book_usfm.downcase] = {human: truncate(book_info.human,length: 40,separator: " "), chapters: chapters }
 
   / Json representation of our version. Currently used for building our dynamic chapter grid menu.
   / This will be cached along with the entire template
