--- a/app/views/references/_reader.html.haml
+++ b/app/views/references/_reader.html.haml
@@ -23,7 +23,7 @@
          "data-verse-modal-enabled" => "#{!modal_verse.nil?}",
          "data-book"       => reference[:book].to_s.downcase,
          "data-book-api"   => reference[:book].sub(/[A-Z]+/) {|m| m.downcase},
-         "data-book-human" => version.books[reference[:book]].human,
+         "data-book-human" => truncate(version.books[reference[:book]].human, length: 40, separator: " "),
          "data-chapter"    => reference[:chapter].to_s,
          "data-version"    => reference[:version].to_s,
          "data-setting-trans-notes" => client_settings.reader_trans_notes,
