Add a schema.org field on single verse modal
* On the single verse modal, added attributes to support Schema.org
  that way when you share the single verse on something like Google+
  it picks up the content of the verse rather than the generic site
  description from the HEAD of the HTML

--- a/app/views/shared/_modal_single_verse.html.haml
+++ b/app/views/shared/_modal_single_verse.html.haml
@@ -4,7 +4,7 @@
     :plain
       var modal = new VerseModal();
 
-#modal_single_verse.modal
+#modal_single_verse.modal{:itemscope => true, :itemtype => 'http://schema.org/Article'}
   #modal_overlay.overlay &nbsp;
   #modal_window.window
     %header
@@ -16,7 +16,7 @@
 
       %a.close{:href => '#'} Close
     %section
-      %p.big= verse.content.html_safe
+      %p.big{:itemprop => 'description'}= verse.content.html_safe
       %hr
       %p
         - if reference
