Tweaked the CSS on the landing page

--- a/app/assets/stylesheets/_videos.sass
+++ b/app/assets/stylesheets/_videos.sass
@@ -8,13 +8,7 @@ article.videos-publisher .video-box
   width: 399px
   float: left
   padding: 4px
-  margin: 0 0 40px 30px
-
-article.videos-home .video-box:first-child,
-article.videos-series .video-box:first-child,
-article.videos-detail .video-box:first-child,
-article.videos-publisher .video-box:first-child
-  margin: 0 0 40px 0
+  margin: 0 15px 40px 0
 
 // ------------Landing page
 
