Removed text over images on landing page. Updated BS image.

--- a/app/assets/stylesheets/_videos.sass
+++ b/app/assets/stylesheets/_videos.sass
@@ -25,6 +25,9 @@ article.videos-publisher
       color: #fff
       text-decoration: none
       padding-top: 185px
+      text-indent: 100%
+      overflow: hidden
+      white-space: nowrap
 
       div
         background: rgba(0,0,0,.4) image-url("blue-arrow@2x.png") no-repeat 358px 14px
