--- a/app/views/videos/index.html.haml
+++ b/app/views/videos/index.html.haml
@@ -3,15 +3,16 @@
   %h1
     Videos
 
-  .video-box
-    =link_to(category_videos_path, {class: "video-name bible-series"}) do
-      %h2 The Bible Series
-    -# Biz is asking for no text on images but leaving this in case they change their minds
-      %div
-        %h2
-          The Bible series
-        %p
-          Subcopy goes here
-    =link_to(publisher_video_path(id: "test"), {class: "video-pub"}) do
-      %h5
-        By Sum Dudes
+  - 3.times do
+    .video-box
+      =link_to(category_videos_path, {class: "video-name bible-series"}) do
+        %h2 The Bible Series
+      -# Biz is asking for no text on images but leaving this in case they change their minds
+        %div
+          %h2
+            The Bible series
+          %p
+            Subcopy goes here
+      =link_to(publisher_video_path(id: "test"), {class: "video-pub"}) do
+        %h5
+          By Sum Dudes
