fixed layout/css issues for android

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -262,7 +262,8 @@
     text-decoration: none
 
   .mobile#nav_mobile nav + nav
-    margin-top: -20px
+    position: relative
+    top: -20px
 
   .mobile nav + nav ul
     height: 87px
