--- a/app/assets/stylesheets/mobile/_audio_player.sass
+++ b/app/assets/stylesheets/mobile/_audio_player.sass
@@ -1,2 +1,9 @@
 .mejs-time-rail
-  width: 85% !important
+  width: 68% !important
+  background: #fff
+
+  span
+    max-width: 100% !important
+
+  span.mejs-time-float
+    width: 42px !important
