--- a/app/views/shared/_menu_settings.html.haml
+++ b/app/views/shared/_menu_settings.html.haml
@@ -2,10 +2,13 @@
   %span.menu_arrow
     &nbsp;
   .tab_navigation.settings.mobile
-    %a.font{:href => '#font', :class => 'selected'} Font
-    %a.font_size{:href => '#size'} Size
-    %a.extras{:href => '#extras'} Extras
-  %br.clear
+    .inner_wrapper
+      %a.font{:href => '#font', :class => 'selected'} 
+        = t('Font')
+      %a.font_size{:href => '#size'}
+        = t('Size')
+      %a.extras{:href => '#extras'}
+        = t('Extras')
   %form.dynamic_menu_inner{:action => ''}
     %fieldset.clearfix#font_settings
       %p.gutter_bottom_half
