Tab styling: Fixed line-height in friends tabs, styled the friends tab in a users profile. Tweaked the pagination.

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -263,10 +263,7 @@
 
   .mobile#nav_mobile nav + nav
     position: relative
-    top: -20px
-
-  .mobile nav + nav ul
-    height: 87px
+    margin-top: -20px
 
   .mobile #nav_mobile_sign_in a,
   .mobile #nav_mobile_sign_out a,
