--- a/app/assets/stylesheets/mobile/_user.sass
+++ b/app/assets/stylesheets/mobile/_user.sass
@@ -193,9 +193,10 @@
     li
       p
         margin-bottom: 0
+        line-height: 1.4em
 
       h5
-        margin-bottom: 8px
+        margin-bottom: 11px
         line-height: 1.3em
 
       .gutter_top_half
@@ -256,12 +257,43 @@
 
       .mute
         font-size: 12px
+        margin-top: 6px
 
       li
         padding: 0
 
   .combo_button
     font-size: 15px
+    margin: -5px auto
+    width: 90%
+    position: relative
+    left: 0
+    top: 0
+    height: 43px
+    line-height: 39px
+
+    dd
+      background-color: #dedede
+      border:
+        top: 2px solid #eee
+        bottom: 2px solid #ccc
+      a
+        color: #444 !important
+
+    .highlighted
+      background-color: #666
+      border:
+        top: 3px solid #444
+        bottom: 1px solid #555
+      a
+        color: #fff !important
+
+    .highlighted:hover
+      background: #666
+
+  .pagination
+    margin-bottom: 5px
+    padding: 15px 0 0 20px
 
 // Notifications
 //----------------------------------------------------------------------------------------------------
