--- a/app/views/subscriptions/calendar.html.haml
+++ b/app/views/subscriptions/calendar.html.haml
@@ -11,8 +11,9 @@
   %h1= t("plans.calendar")
 
   .tab_navigation.plan_settings.mobile
-    = link_to t("plans.settings"), edit_user_subscription_path(current_user, subscription)
-    = link_to t("plans.month"), calendar_user_subscription_path(current_user, subscription),{:class => "selected"}
+    .inner_wrapper
+      = link_to t("plans.settings"), edit_user_subscription_path(current_user, subscription)
+      = link_to t("plans.month"), calendar_user_subscription_path(current_user, subscription),{:class => "selected"}
 
   :ruby
     statuses = subscription.day_statuses
