audio toolbar css tweak

--- a/app/assets/stylesheets/mobile/_audio_player.sass
+++ b/app/assets/stylesheets/mobile/_audio_player.sass
@@ -1,5 +1,8 @@
+.mejs-controls
+  width: 70%
+
 .mejs-time-rail
-  width: 68% !important
+  width: 64% !important
   background: #fff
 
   span
@@ -7,3 +10,5 @@
 
   span.mejs-time-float
     width: 42px !important
+
+
