Minor formatting for bookmarks widget.

--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -311,6 +311,17 @@ a.more_arrow:hover
   padding: 5px 25px 5px 0
 
 
+// Bookmarks
+//------------------------------------------------------------------------------------------
+
+.widget.bookmarks
+  ul
+    li
+      b
+        display: block
+        font:
+          size: 13px
+
 // Parallel Notes Sidebar
 //------------------------------------------------------------------------------------------
 .parallel_notes .pop_out_button
